修改AI用户头像生成逻辑